--- a/README.org
+++ b/README.org
@@ -28,7 +28,7 @@ This package provides analogous commands adapted for tex buffers, with the class
 - math environment delimiters =$...$=, =\(...\)=, =\[...\]=, =$$...$$=
 - mathematical delimiters: parentheses, brackets, braces, =\langle= - =\rangle=, =\lvert= - =\rvert=, etc., and compositions of these with modifiers such as =\left= - =\right=, =\Bigg=, etc.  See =M-x customize-group tex-parens= for details.
 
-There is some support in this direction in the built-in [[https://www.gnu.org/software/emacs/manual/html_node/emacs/TeX-Mode.html][tex-mode]], and also in [[https://www.gnu.org/software/auctex/][AUCTeX]].  There are many packages, such as [[https://paredit.org/][paredit]] and [[https://github.com/abo-abo/lispy][lispy]], that add further useful commands and bindings to lisp modes, and many other packages, such as [[https://github.com/Fuco1/smartparens][smartparens,]] [[https://github.com/AmaiKinono/puni][puni]] and [[https://github.com/purcell/paredit-everywhere][paredit-everywhere,]] that aim to give consistent parenthesis-based commands across all modes.  There's also the [[https://github.com/iyefrat/evil-tex][evil-tex]] package for those that prefer a modal setup.  I was unable to get these packages to behave in the desired manner.  Smartparens comes close, but doesn't seem to support arbitrary begin/end pairs, and has some issues when one delimiter is a prefix of another (https://github.com/Fuco1/smartparens/issues/1193).  This package should work out-of-the-box and behave in tex buffers just like stock Emacs does in lisp buffers.
+There is some support in this direction in the built-in [[https://www.gnu.org/software/emacs/manual/html_node/emacs/TeX-Mode.html][tex-mode]], in [[https://www.gnu.org/software/auctex/][AUCTeX]] and in [[https://github.com/Malabarba/latex-extra][latex-extra]].  There are many packages, such as [[https://paredit.org/][paredit]] and [[https://github.com/abo-abo/lispy][lispy]], that add further useful commands and bindings to lisp modes, and many other packages, such as [[https://github.com/Fuco1/smartparens][smartparens,]] [[https://github.com/AmaiKinono/puni][puni]] and [[https://github.com/purcell/paredit-everywhere][paredit-everywhere,]] that aim to give consistent parenthesis-based commands across all modes.  There's also the [[https://github.com/iyefrat/evil-tex][evil-tex]] package for those that prefer a modal setup.  I was unable to get these packages to behave in the desired manner.  Smartparens comes close, but doesn't seem to support arbitrary begin/end pairs, and has some issues when one delimiter is a prefix of another (https://github.com/Fuco1/smartparens/issues/1193).  This package should work out-of-the-box and behave in tex buffers just like stock Emacs does in lisp buffers.
 
 * Configuration
 Download this repository, install using =M-x package-install-file= (or package-vc-install, straight, elpaca, ...), and add something like the following to your [[https://www.emacswiki.org/emacs/InitFile][init file]], adjusting the binds according to preference (and replacing =LaTeX-mode= with =latex-mode= or =tex-mode= or =plain-tex-mode=, whichever is appropriate, if you don't use AUCTeX):
