eliminate dependence on `transpose-sexps-function'
This variable was introduced only in Emacs 30.1, and is not needed for
the package to work, so we have removed reference to it, replacing its
role with a new defun `tex-parens-transpose-sexps'.  As a consequence,
`tex-parens-transpose-sexps' now needs to be bound in the keymap
underlying `tex-parens-mode' and also in any user config (see the README).

--- a/README.org
+++ b/README.org
@@ -56,7 +56,7 @@ For finer control over how keys are bound, you can avoid =tex-parens-mode= and i
         ("M-_" . tex-parens-delete-pair)
         ("C-M-SPC" . tex-parens-mark-sexp)
         ("C-M-k" . tex-parens-kill-sexp)
-        ("C-M-t" . transpose-sexps)
+        ("C-M-t" . tex-parens-transpose-sexps)
         ("C-M-<backspace>" . tex-parens-backward-kill-sexp)
         ("M-+" . tex-parens-raise-sexp))
   :hook
